<resources>
    <string name="app_name">医学电子书包</string>

    <!-- 登录页面 -->
    <string name="login_phone_email_input_hint">请输入手机号码/邮箱</string>
    <string name="login_password_input_hint">请输入6-16位字母，数字</string>
    <string name="login_title">登录</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册账号</string>
    <string name="login_find_password">找回密码</string>
    <string name="login_look_around">随便看看>></string>
    <string name="username_cannot_null">请输入您的账号</string>
    <string name="password_cannot_null">请输入密码</string>
    <string name="password_six">密码不能少于6位</string>
    <string name="login_failed">登录失败</string>
    <!-- 注册 -->
    <string name="register_get_verification_code_failed">获取验证码失败</string>
    <string name="register_failed">注册失败</string>
    <string name="reset_password_failed">设置密码失败</string>
    <string name="find_password_failed">验证失败</string>
    <string name="bind_phone_failed">绑定手机失败</string>

    <!-- 首页 -->
    <string name="main_foot_title_bookcase">书架</string>
    <string name="main_foot_title_bookcity">书城</string>
    <string name="main_foot_title_database">数据库</string>
    <string name="main_foot_title_exam">考试</string>
    <string name="main_foot_title_operation">教程</string>
    <string name="update_check">当前版本已是最新版本</string>
    <string name="update_check_failed">检查更新失败</string>
    <!-- 异常提示 -->
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="json_parser_failed">数据解析异常</string>
    <string name="http_exception_error">网络异常，请稍后重试</string>
    <!--加载-->
    <string name="loading">加载中..</string>
    <string name="exit_hint">再按一次退出程序</string>

    <string name="task_str" formatted="false">启动%d个任务串行下载</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_loading">支付结果确认中</string>
    <string name="pay_failed">支付失败</string>
    <string name="pay_wx_client_install">请安装微信客户端后进行此操作</string>
    <string name="pay_wx_client_version">该微信版本不支持微信支付</string>
    <string name="pay_call_wx">正在调起微信支付</string>
    <string name="pay_call_alipay">正在调起支付宝支付</string>
    <string name="download_out_of_space">可用空间不足</string>
    <string name="download_failed">下载失败,请重试</string>
    <string name="book_not_exists">这本书已经丢失或损坏，请重新安装</string>
    <string name="title_no_network">当前网络不可用，请检查网络设置</string>

</resources>
